# weet-erp-v4

./: .gitignore  DEMO.md  USAGE.md  package-lock.json  package.json
backend/: .gitignore  PRIVACY_POLICY.md  com.weet.scheduler.plist  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/api/: main.py
backend/app/channels/: __init__.py  dm_monitor.py  instagram.py  naver_blog.py  naver_cafe.py  youtube.py
backend/app/clients/: __init__.py  error_classifier.py  instagram_client.py  naver.py  openclaw.py  youtube.py
backend/app/compliance/: __init__.py  pipa.py
backend/app/content/: brand_voice.py  generator.py
backend/app/conversion/: consultation.py  image_service.py
backend/app/core/: config.py  discord_bot.py  llm.py  notification_service.py  prompts.py
backend/app/db/: __init__.py  init.py  models.py  session.py
backend/app/intelligence/: __init__.py  radar.py  signal_analyzer.py  suggestion.py
backend/app/journey/: __init__.py  manager.py  trigger_engine.py
backend/app/leads/: discovery.py  persona.py  scorer.py
backend/app/orchestrator/: __init__.py  __main__.py  main.py  runner.py  scheduler.py
backend/app/workflows/: __init__.py  approval.py  executor.py
backend/backend/.sessions/: weet_kr_settings.json
backend/tests/api/: test_consultations_routes.py  test_routes.py
backend/tests/channels/: test_dm_monitor.py  test_instagram.py  test_naver_blog.py  test_naver_cafe.py  test_youtube.py
backend/tests/clients/: test_instagram_client.py  test_naver.py  test_openclaw_instagram.py  test_youtube.py
public/: manifest.json  (+1 more)
(+183 files in other folders)
