[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weet-director-backend"
version = "0.1.0"
description = "Weet Director - AI-powered social media automation backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "supabase>=2.0.0",
    "discord.py>=2.3.0",
    "openai>=1.0.0",
    "instagrapi>=2.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "openclaw-sdk>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "greenlet>=3.3.2",
]
